hphp/test/zend/good/tests/classes/autoload_021.php.expectf

Fatal error: Class undefined: ../BUG in %s/autoload_021.php on line 4
